[gd_scene load_steps=6 format=3 uid="uid://dwtuj8gt2qb8i"]

[ext_resource type="Script" uid="uid://2dh54713klop" path="res://Game/Levels/level_1.gd" id="1_615i5"]
[ext_resource type="PackedScene" uid="uid://dw10flqwe3hji" path="res://Game/Player/player.tscn" id="1_yq1ce"]
[ext_resource type="Texture2D" uid="uid://ds1kji66nw5hf" path="res://icon.svg" id="2_hxy2c"]
[ext_resource type="PackedScene" uid="uid://4og3jljwtklm" path="res://Game/Enemies/enemy_spawner.tscn" id="4_615i5"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_hxy2c"]
vertices = PackedVector2Array(1522.0469, -1533, 1539.9375, 1525, -1515.0234, 1526.9922, -1521.9688, -1534.9922)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-1532, -1545, -1525, 1537, 1550, 1535, 1532, -1543)])

[node name="Level1" type="Node2D"]
script = ExtResource("1_615i5")

[node name="Player" parent="." instance=ExtResource("1_yq1ce")]

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -100
scale = Vector2(24, 24)
texture = ExtResource("2_hxy2c")

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
unique_name_in_owner = true
navigation_polygon = SubResource("NavigationPolygon_hxy2c")

[node name="EnemySpawner" parent="." instance=ExtResource("4_615i5")]
unique_name_in_owner = true
max_x = 1575
max_y = 1575

[node name="LevelOverTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="LevelOverTimer" to="." method="_on_level_over_timer_timeout"]
